--- a/lesson 5/index.html
+++ b/lesson 5/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HW additional</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My-app</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -140,7 +143,9 @@
     <div class="all__user__info">
         <div class="full__info">
             <div class="information">
-                <div class="user__avatar"></div>
+                <div class="wrapper_user__avatar">
+                    <div class="user__avatar"></div>
+                </div>
                 <div class="user__bio">
                     adipisicing elit. Voluptas, molestias!
                     Lorem ipsum dolor sit amet consectetur
@@ -148,7 +153,9 @@
                 </div>
             </div>
             <div class="information">
-                <div class="user__avatar"></div>
+                <div class="wrapper_user__avatar">
+                    <div class="user__avatar"></div>
+                </div>
                 <div class="user__bio">
                     adipisicing elit. Voluptas, molestias!
                     Lorem ipsum dolor sit amet consectetur
@@ -156,7 +163,9 @@
                 </div>
             </div>
             <div class="information">
-                <div class="user__avatar"></div>
+                <div class="wrapper_user__avatar">
+                    <div class="user__avatar"></div>
+                </div>
                 <div class="user__bio">
                     adipisicing elit. Voluptas, molestias!
                     Lorem ipsum dolor sit amet consectetur
@@ -180,5 +189,20 @@
         </div>
     </div>
 </div>
+<footer>
+    <div class="footer__wrapper">
+        <div class="footer__info ">
+            ©2021 Yatsiv
+        </div>
+        <div class="footer__links">
+            <div class="links__box">
+                <a href="" class="link__icons"></a>
+                <a href="" class="link__icons"></a>
+                <a href="" class="link__icons"></a>
+                <a href="" class="link__icons"></a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
