--- a/lesson 6/index.html
+++ b/lesson 6/index.html
@@ -148,15 +148,15 @@
                 <div class="food__menu">
                     <div class="menu__items">
                         <img src="img/hamburger-494706_1920%201.png" alt="hamburger" class="hamburg">
-                        <p class="hamb__desc">Гамбургер мини ------------------ 220руб</p>
+                        <p class="hamb__desc">Гамбургер мини <span>------------------</span> 220руб</p>
                     </div>
                     <div class="menu__items">
                         <img src="img/hamburger-494706_1920%201.png" alt="hamburger" class="hamburg">
-                        <p class="hamb__desc">Гамбургер мини ------------------ 220руб</p>
+                        <p class="hamb__desc">Гамбургер мини <span>------------------</span> 220руб</p>
                     </div>
                     <div class="menu__items">
                         <img src="img/hamburger-494706_1920%201.png" alt="hamburger" class="hamburg">
-                        <p class="hamb__desc">Гамбургер мини ------------------ 220руб</p>
+                        <p class="hamb__desc">Гамбургер мини <span>------------------</span> 220руб</p>
                     </div>
                 </div>
             </div>
@@ -213,6 +213,49 @@
                </div>
            </div>
        </div>
+       <div class="customer__respons">
+           <div class="wrapper">
+               <div class="response__container">
+                   <p class="response__p">
+                       Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки.
+                       Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!
+                   </p>
+                   <img src="img/beard-1845166_1920%201.png" alt="avatar" class="customer">
+                   <h3>Посетитель</h3>
+                   <h4>Николай</h4>
+               </div>
+           </div>
+       </div>
+       <div class="grid__gallary">
+            <div class="boxes">
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+            <div class="gallary wrapper">
+                <h2>Галерея Блюд</h2>
+                <div class="grid__menu">
+                        <img src="img/table-71380_1280%202.png" alt="table" class="grid1">
+                    <div><img src="img/coffee-3120750_1920%201.png" alt="coffe" class="grid2">
+                        <img src="img/goulash-6054124_1920%201.png" alt="borsh" class="grid3"></div>
+                    <div><img src="img/coffee-3120750_1920%201.png" alt="coffe" class="grid2">
+                        <img src="img/goulash-6054124_1920%201.png" alt="borsh" class="grid3"></div>
+                        <img src="img/table-71380_1280%202.png" alt="table" class="grid6">
+                </div>
+            </div>
+       </div>
+       <div class="gri__worker">
+           <div class="worker wrapper">
+               <h2>Наши Повара</h2>
+               <div class="worker__foto">
+                   <img src="img/cook-196932_1920%201.png" alt="sheff">
+                   <img src="img/image%204.png" alt="worker">
+                   <img src="img/pizza-366111_1280%201.png" alt="pizza">
+               </div>
+           </div>
+       </div>
+       <footer>
+           <div class="footer__img"></div>
+       </footer>
     </div>
     </div>
 </body>
