first_project media

--- a/first project/index.html
+++ b/first project/index.html
@@ -15,8 +15,9 @@
                 <div class="header__left">
                     <img src="img/loc.png" alt="vector">
                     <div class="left-btn"> Ваш город: <a href="#"> Москва</a></div>
-                    <div class="left-btn">Информация</div>
-                    <div class="left-btn">Сотрудничество</div>
+                    <div class="left-btn l2">Информация</div>
+                    <div class="left-btn l2">Сотрудничество</div>
+                    <div class="left-btn media">Еще <img src="img/Chevron%20Right%201.png" alt="arrow"></div>
                 </div>
                 <div class="header__right">
                     <div class="right-btn">Доствка</div>
@@ -50,32 +51,34 @@
                 <img src="img/placeholder%201.png" alt="loc">
                 <p>Невский пр-т, д. 45</p>
             </div>
-            <div class="whatsapp__info">
-                <div class="whatsapp_btn">
-                    <img src="img/whatsapp%20(2)%201.png" alt="whatsapp">
-                    <a href="#"> Напишите нам в WhatsApp</a>
+            <div class="media_whatsapp">
+                <div class="whatsapp__info">
+                    <div class="whatsapp_btn">
+                        <img src="img/whatsapp%20(2)%201.png" alt="whatsapp">
+                        <a href="#"> Напишите нам в WhatsApp</a>
+                    </div>
                 </div>
-            </div>
-            <div class="number__info">
-                <p class="number__num">+7 383 291 92 86</p>
-                <p class="number__text"><a href="#">форма обратной связи</a></p>
+                <div class="number__info">
+                    <p class="number__num">+7 383 291 92 86</p>
+                    <p class="number__text"><a href="#">форма обратной связи</a></p>
+                </div>
             </div>
         </div>
         <div class="main__button wrapper">
             <div class="catalog">
-                <div class="button">
+                <div class="button-c">
                     <div class="hamburg">
                          <div class="haburg1"></div>
                          <div class="haburg1"></div>
                          <div class="haburg1"></div>
                     </div>
-                    <p class="hamb__text">Каталог</p>
+                    <p class="hamb__text"><span>Каталог</span></p>
                 </div>
             </div>
             <div class="serch">
                 <form class="serching" action="action_page.php">
                     <input type="text" placeholder="Поиск по наименованию или артикулу" name="search" class="serching__form">
-                    <button type="submit">Найти</button>
+                    <button type="submit"><img src="img/search%20(2)%201.png" alt="search" class="serch_img"><span>Найти</span></button>
                 </form>
             </div>
             <div class="user__enter">
@@ -120,7 +123,7 @@
                     <p class="bn__price">4 430₽ <span>5 430₽</span> <button><img src="img/cart%201.png" alt=""></button> </p>
                 </div>
             </div>
-            <div class="bn__card1">
+            <div class="bn__card1 bn_media">
                 <div class="bn__img">
                     <p>Акция</p>
                     <img src="img/det.png" alt="product">
@@ -133,6 +136,12 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="media__buttons wrapper">
+        <me__but><img src="img/home%20(2)%201.png" alt="home"><p>Главная</p></me__but>
+        <me__but><img src="img/heart_black.png" alt="heart"><p>Избранное</p></me__but>
+        <me__but><img src="img/Group.png" alt="cart"><p>Корзина</p></me__but>
+        <me__but><img src="img/user%20(3)%201.png" alt="user"><p>Профиль</p></me__but>
     </div>
     <div class="products wrapper">
         <div class="products__columns">
@@ -189,9 +198,9 @@
                 <button>Сейчас покупают</button>
             </div>
         </div>
-        <div class="catalog__grid">
+        <div class="catalog__grid wrapper">
             <div class="cataog__card">
-                <img src="img/item11.png" alt="item">
+                <img src="img/item11.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -202,11 +211,11 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
             <div class="cataog__card">
-                <img src="img/item4.png" alt="item">
+                <img src="img/item4.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -217,11 +226,11 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
             <div class="cataog__card">
-                <img src="img/item11.png" alt="item">
+                <img src="img/item11.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -232,11 +241,11 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
             <div class="cataog__card">
-                <img src="img/item3.png" alt="item">
+                <img src="img/item3.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -248,11 +257,11 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
             <div class="cataog__card">
-                <img src="img/item11.png" alt="item">
+                <img src="img/item11.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -263,11 +272,11 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
             <div class="cataog__card">
-                <img src="img/item4.png" alt="item">
+                <img src="img/item4.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -278,11 +287,11 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
             <div class="cataog__card">
-                <img src="img/item11.png" alt="item">
+                <img src="img/item11.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -293,11 +302,11 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
             <div class="cataog__card">
-                <img src="img/item3.png" alt="item">
+                <img src="img/item3.png" alt="item" class="media_img">
                 <div class="star">
                     <img src="img/Star%202.png" alt="star" class="star_img">
                     <span class="raiting">4.5</span>
@@ -308,7 +317,7 @@
                 <div class="ct__btn">
                     <button><img src="img/cart%201.png" alt="cart"> В корзину</button>
                     <img src="img/heartblue.png" alt="heart">
-                    <img src="img/Group%20147.png" alt="group">
+                    <img src="img/Group%20147.png" alt="group" class="media_group">
                 </div>
             </div>
         </div>
@@ -433,8 +442,8 @@
                    </div>
                 </div>
             </div>
-            <p class="created">2017 © ООО «АВТ-ЗАП» - запчасти для акпп</p>
         </div>
+        <p class="created">2017 © ООО «АВТ-ЗАП» - запчасти для акпп</p>
     </footer>
 </body>
 </html>
