--- a/first project/index.html
+++ b/first project/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <title>Project</title>
+    <title>First Project</title>
 </head>
 <body>
     <header>
